--- a/api/package.json
+++ b/api/package.json
@@ -18,11 +18,15 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.5.1",
     "express": "^5.1.0",
-    "pg": "^8.16.0"
+    "lodash": "^4.17.21",
+    "pg": "^8.16.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/lodash": "^4.17.17",
     "@types/pg": "^8.15.4",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.20.3",
