--- a/ecommerce-mobile/package.json
+++ b/ecommerce-mobile/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "^15.2.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
