--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
     "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.27",
@@ -20,6 +21,7 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack/ui-next-adapter": "^2.1.12",
     "autoprefixer": "^10.4.21",
+    "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
     "next": "14.2.30",
     "react": "^18",
