--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/actionsheet": "^0.2.53",
     "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
     "@gluestack-ui/form-control": "^0.1.19",
@@ -18,8 +19,10 @@
     "@gluestack-ui/input": "^0.1.38",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack/ui-next-adapter": "^2.1.12",
+    "@legendapp/motion": "^2.4.0",
     "autoprefixer": "^10.4.21",
     "dayjs": "^1.11.13",
     "lucide-react-native": "^0.525.0",
