--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -33,7 +33,8 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-svg": "^15.2.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
