--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "pg": "^8.16.0",
     "serverless-http": "^3.2.0",
+    "stripe": "^18.3.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
