--- a/ecommerce-mobile/package.json
+++ b/ecommerce-mobile/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.6",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@stripe/stripe-react-native": "0.45.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
